use `THREE.Euler` instead of whole `THREE` (fixes #11)

--- a/WebGLTemplates/WebVR/index.html
+++ b/WebGLTemplates/WebVR/index.html
@@ -21,7 +21,7 @@
   </div>
   <p class="footer">&laquo; created with <a href="http://unity3d.com/" title="Go to unity3d.com">Unity</a> &raquo;</p>
   %UNITY_WEBGL_LOADER_GLUE%
-  <script src="js/three.min.js"></script>
+  <script src="js/three_euler.js"></script>
   <script src="js/UnityWebVRManager.js"></script>
 </body>
 </html>
