fix handling exiting VR for legacy; abstract legacy Fullscreen logic

--- a/WebGLTemplates/WebVR/index.html
+++ b/WebGLTemplates/WebVR/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="logo"></div>
       <div class="fullscreen">
-        <button id="btnEnterVr" class="btn btnEnterVr" title="Enter VR">Enter VR</button>
+        <button id="btnToggleVr" class="btn btnToggleVr" title="Enter VR">Enter VR</button>
         <button id="btnResetSensor" class="btn btnResetSensor" title="Reset Sensor">Reset Sensor</button>
       </div>
       <div class="title">%UNITY_WEB_NAME%</div>
