add breathing room below VR buttons

--- a/WebGLTemplates/WebVR/index.html
+++ b/WebGLTemplates/WebVR/index.html
@@ -16,8 +16,8 @@
       </div>
       <div class="logo"></div>
       <div class="fullscreen">
-        <button id="btnToggleVr" class="btn btnToggleVr" data-enter-vr-title="Enter VR" data-exit-vr-title="Exit VR" title="Enter VR">Enter VR</button>
-        <button id="btnResetSensor" class="btn btnResetSensor" title="Reset Sensor">Reset Sensor</button>
+        <button id="btnVrToggleMode" class="btn btnVrToggleMode" data-enter-vr-title="Enter VR" data-exit-vr-title="Exit VR" title="Enter VR">Enter VR</button>
+        <button id="btnVrResetSensor" class="btn btnVrResetSensor" title="Reset Sensor">Reset Sensor</button>
       </div>
       <div class="title">%UNITY_WEB_NAME%</div>
     </div>
