fix presentation in Chromium; show nice message over canvas when presenting (related to issue #4)

--- a/WebGLTemplates/WebVR/index.html
+++ b/WebGLTemplates/WebVR/index.html
@@ -11,7 +11,7 @@
   <body class="template" data-unity-width="960" data-unity-height="600" data-unity-loaded="false" data-vr-loaded="false" data-supports-vr="false">
     <p class="header"><span>Unity WebGL Player | </span>%UNITY_WEB_NAME%</p>
     <div class="template-wrap clear">
-      <div class="canvas-wrapper" style="width: %UNITY_WIDTH%px; height: %UNITY_HEIGHT%px;">
+      <div class="canvas-wrapper" style="width: %UNITY_WIDTH%px; height: %UNITY_HEIGHT%px" data-vr-presentation-text="Put on your VR headset now">
         <canvas class="emscripten" id="canvas" height="%UNITY_HEIGHT%" width="%UNITY_WIDTH%"></canvas>
       </div>
       <div class="logo"></div>
